--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="2-0" data-id="2-0"><div id="player">player</div></div>
             <div id="2-1" data-id="2-1"></div>
             <div id="2-2" data-id="2-2"></div>
-            <div id="2-3" data-id="2-3"></div>
+            <div id="2-3" data-id="2-3"><div id="finish">Finish</div></div>
             <div id="3-0" data-id="3-0"></div>
             <div id="3-1" data-id="3-1"></div>
             <div id="3-2" data-id="3-2"></div>
