add step by step moves

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="4-3" data-id="4-3"></div>
         </div>
 
-        <div id="player">player</div>
+        <span id="player">player</span>
         <span id="finish"></span>
 
         <div id="output"><p id="alert">You loose !</p></div>
